testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport2.errors.txt
usage.js(1,19): error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport2.js'. 'lateBoundAssignmentDeclarationSupport2.js' implicitly has an 'any' type.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport2.js");
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './lateBoundAssignmentDeclarationSupport2.js'. 'lateBoundAssignmentDeclarationSupport2.js' implicitly has an 'any' type.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport2.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    module.exports[_sym] = "ok";
    module.exports[_str] = "ok";
    module.exports.S = _sym;